# orbitpy-revised

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Style Guide.md  environment.yml  pyproject.toml
docs/: run.rst
docs/source/: api_reference.rst  conf.py  index.rst  module_base.rst  module_util.rst
examples/: dshield_format_converter.py  glsdc.py  orbit_estimation.py  orekit_propagator.py  point_coverage.py  propagator_validation.py  solve_drag_coefficient.py  specular_example.py  specular_rcg_example.py  specular_validation.py  specular_validation_prop.py
examples/cygnss_data/: active_gps_numbers.txt
examples/cygnss_gnssr/: MissionSpecs.json  __cygnss_spacecrafts__.json  __gnss_spacecrafts__.json  cygnss_gnssr.py  cygnss_spacecrafts.json  gnss_spacecrafts.json  spatial_points.json
examples/dshield-cygnss-demo/: MissionSpecs.json  convert_grid_to_spatial_points.py  cygnss_spacecrafts.json  dshield-cygnss-demo.py  spatial_points.json  (+2 more)
orbitpy/: base.py  contactfinder.py  coverage.py  coveragecalculator.py  eclipsefinder.py  mission.py  orbits.py  orekitpropagator.py  plotting.py  position.py  propagator.py  resources.py  specular.py  state.py  time.py  util.py  utils.py
slowtests/: gmatutil.py  test_contactfinder_validation.py  test_coverage_validation.py  test_eclipsefinder_validation.py  test_validation.py
tests/: base.py  example_omm_list.json  test_contactfinder.py  test_eclipsefinder.py  test_mission.py  test_orbits.py  test_position.py  test_propagator.py  test_resources.py  test_state.py  test_time.py  test_util.py  test_validation.py
(+164 files in other folders)
