[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.12"
]
build-backend = "scikit_build_core.build"

[project]
name = "orbitpy"
version = "0.1.0"
description = "A Python package for computing satellite remote-sensing orbit data."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Vinay Ravindra", email = "vravindra@baeri.org" },
    { name = "Ryan Ketzner", email = "ketzner@ucf.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "skyfield",
    "spiceypy",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "black",
    "coverage",
    "sphinx",
    "sphinx-rtd-theme"
]

[tool.scikit-build]
wheel.packages = ["src/orbitpy"]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.black]
line-length = 80